Bug 51039 - [PATCH] lib: fix memory leaks in act-user
Summary: [PATCH] lib: fix memory leaks in act-user
Status: RESOLVED FIXED
Alias: None
Product: accountsservice
Classification: Unclassified
Component: general (show other bugs)
Version: unspecified
Hardware: All All
: medium normal
Assignee: Matthias Clasen
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-06-13 08:05 UTC by Pavel Vasin
Modified: 2012-06-13 08:07 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
fix memory leaks in act-user patch (1.23 KB, patch)
2012-06-13 08:05 UTC, Pavel Vasin
Details | Splinter Review

Description Pavel Vasin 2012-06-13 08:05:12 UTC
Created attachment 62968 [details] [review]
fix memory leaks in act-user patch
Comment 1 Ray Strode [halfline] 2012-06-13 08:07:54 UTC
Thanks


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.