lib: fix memory leaks in act-user

caller must free all of the values returned by g_variant_iter_next()

https://bugs.freedesktop.org/show_bug.cgi?id=51039